# Trailing-Labor-Yield

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  PDF_EXPORT.md  PUBLISH_CHECKLIST.md  README.md  RELEASE_MANIFEST.md
dao/: README.md  foundry.toml
dao/contracts/: ContributorRegistry.sol  TreasuryDistributor.sol
dao/contracts/interfaces/: IContributorRegistry.sol  ITreasuryDistributor.sol
dao/contracts/libraries/: WadMath.sol
dao/test/: TLYTreasury.t.sol
dao/test/mocks/: MockERC20.sol
docs/: tly_one_page_summary.md  tly_visual_diagrams.md  tly_white_paper_v0.9_public_draft_pdf_source.md
launch/: long_form_launch_post.md
paper/: README.md  tly_faq_objections.md  tly_one_page_summary.md  tly_visual_diagrams.md  tly_white_paper_v0.9_public_draft.md  tly_white_paper_v0.9_public_draft_pdf_source.md
paper/figures/: tly_mechanism_diagram_source.html
release/phase1_v0.9_public_draft/: GITHUB_SETUP.md  PDF_EXPORT.md  PUBLISH_CHECKLIST.md  RELEASE_MANIFEST.md
release/phase1_v0.9_public_draft/launch/: hacker_news_post.md  long_form_launch_post.md  reddit_launch_posts.md
release/phase1_v0.9_public_draft/scripts/: export_white_paper.py
scripts/: export_white_paper.py
sim/: README.md  app.py  baseline_coupons.py  baseline_dollars.py  config.yaml  config_coupons.yaml  pyproject.toml
