[project]
name = "tly-simulator"
version = "0.1.0"
description = "Reference simulator and Streamlit interface for Trailing Labor Yield"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.1",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "streamlit>=1.44",
]

[tool.uv]
package = false
